--- a/index.html
+++ b/index.html
@@ -10,8 +10,33 @@
 </head>
 <body>
   <h1>My Game</h1>
-  <p>Loading game...</p>
+  <p>Loading Game...</p>
+  <div id="game-container">
+    <h1>My Game</h1>
+    <canvas id="game-canvas"></canvas>
+  </div>
 
+  <style>
+    html, body {
+  height: 100%;
+  margin: 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background: #222;
+}
+
+#game-container {
+  width: 600px; /* exact width */
+  height: 600px; /* exact height */
+  background: #333;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  border: 2px solid #fff;
+}
+  </style>
   <!-- Link your JavaScript -->
   <script src="index.js"></script>
 </body>
