--- a/index.html
+++ b/index.html
@@ -38,6 +38,13 @@
 }
   </style>
   <!-- Link your JavaScript -->
-  <script src="index.js"></script>
+  <script>
+    const canvas = document.getElementById("game-canvas");
+    canvas.width = 600:
+    canvas.height = 600;
+    const ctx = canvas.getContext("2d");
+    ctx.fillStyle = "red";
+    ctx.fillRect(100, 100, 100, 200, 200);
+  </script>
 </body>
 </html>
