--- a/index.html
+++ b/index.html
@@ -34,31 +34,7 @@
 }
   </style>
   <!-- Link your JavaScript -->
-  <script>
-    (() => {
-  const URL = "https://blockersgotbugsfr.github.io/GreenField-Infinite/";
-
-  let audio = document.getElementById("__bgm_audio__");
-  if (!audio) {
-    audio = new Audio(URL);
-    audio.id = "__bgm_audio__";
-    audio.loop = true;
-    audio.volume = 0.5;
-    document.body.appendChild(audio);
-  } else {
-    audio.src = URL;
-  }
-
-  audio.play().catch(() => console.log("Click the page, then run again to start audio."));
-
-  window.__bgm = {
-    audio,
-    pause(){ audio.pause(); },
-    play(){ audio.play(); },
-    stop(){ audio.pause(); audio.currentTime = 0; },
-    volume(v){ if (typeof v === "number") audio.volume = Math.min(1, Math.max(0, v)); }
-  };
-})();
+  <script src="index.js">
   </script>
 </body>
 </html>
