--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>My Game</title>
+  <title>GreenField Infinite</title>
   <style>
     html, body {
       height: 100%;
