--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 </head>
 <body>
   <div id="game-container">
-    <h1>My Game</h1>
+    <h1>GreenField Infinite</h1>
     <p>Loading Game...</p>
   </div>
 
