--- a/index.html
+++ b/index.html
@@ -35,6 +35,8 @@
     <p>Loading Game...</p>
   </div>
 
+  <audio id="bg-music" src="background-music-soft-calm-346480.mp3" loop></audio>
+
   <script src="index.js"></script>
 </body>
 </html>
