--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     <p>Loading Game...</p>
   </div>
 
-  <audio id="bg-music" src="background-music-soft-calm-346480.mp3" loop></audio>
+  <audio id="bg-music" src="background-music-soft-calm-346480.mp3" loop autoplay muted></audio>
 
   <script src="index.js"></script>
 </body>
