--- a/index.html
+++ b/index.html
@@ -35,6 +35,11 @@
     <p>Loading Game...</p>
   </div>
 
+  <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+<link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+<link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+<link rel="manifest" href="/site.webmanifest">
+
   <audio id="bg-music" src="background-music-soft-calm-346480.mp3" loop autoplay muted></audio>
 
   <script src="index.js"></script>
