--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       display: flex;
       justify-content: center;
       align-items: center;
-      background: #222;
+      background: green;
       font-family: Arial, sans-serif;
       color: #fff;
     }
@@ -23,7 +23,7 @@
     #game-container {
       width: 600px;
       height: 600px;
-      background: #333;
+      background-image: url('');
       display: flex;
       justify-content: center;
       align-items: center;
