--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     #game-container {
       width: 600px;
       height: 600px;
-      background-image: url('');
+      background-image: url('Adobe Express - file.png');
       display: flex;
       justify-content: center;
       align-items: center;
@@ -36,7 +36,8 @@
 </head>
 <body>
   <div id="game-container">
-    <h1>GreenField Infinite</h1>
+    <h1><img src="">
+      GreenField Infinite</h1>
     <p>Loading Game...</p>
   </div>
 
