--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 </head>
 <body>
   <div id="game-container">
-    <h1><img src="">
+    <h1><img src="GreenField Infinite title.png">
       GreenField Infinite</h1>
     <p>Loading Game...</p>
   </div>
