--- a/index.html
+++ b/index.html
@@ -20,10 +20,13 @@
       color: #fff;
     }
 
-    #game-container {
+  #game-container {
       width: 600px;
       height: 600px;
       background-image: url('Adobe Express - file.png');
+      background-repeat: no-repeat; 
+      background-size: cover; 
+      background-position: center; 
       display: flex;
       justify-content: center;
       align-items: center;
@@ -31,7 +34,8 @@
       border: 2px solid #fff;
       position: relative;
       overflow: hidden;
-    }
+}
+
   </style>
 </head>
 <body>
